<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">HitchTransporter</string>
    <string name="payment_url">https://www.myfatoorah.com/01082017131927564407194570</string>
    <string name="google_server_key">"AIzaSyDIZdjdKy0tR4gtgEvVR35Ao8G1KlE_RMk"</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="set">Set</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="of">Of</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="lbl_continue">Continue</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    <string name="continue_label">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="network_not_available">Please check your internet connection &amp; Try again</string>
    <string name="wrong_loging_data">Please check your email and password.</string>
    <string name="generic_server_down">Server may be down please try again later.</string>
    <string name="no_internet_connection">Please check your internet connection &amp; Try again</string>
    <string name="generic_error">Error while receiving response</string>
    <string name="hint_first_name">"First Name"</string>
    <string name="hint_last_name">"Last Name"</string>
    <string name="hint_gender">"Gender"</string>
    <string name="hint_date_of_birth">"Date of Birth"</string>
    <string name="hint_date_of_birth_caps">"Date of Birth"</string>
    <string name="hint_city">"City"</string>
    <string name="hint_state">"State"</string>
    <string name="hint_postal_code">"Postal Code"</string>
    <string name="hint_country">"Country"</string>
    <string name="hint_email">"Email"</string>
    <string name="hint_password">"Password"</string>
    <string name="reenter_password">"Re-Enter Password"</string>
    <string name="sign_in">" Sign In"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="choose_your_gender">"Choose Your Gender"</string>
    <string name="choose_your_usertype">"You will be using this app as :"</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new">Create New</string>
    <string name="sign_in_here">Sign In Here</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="or_txt">"OR"</string>
    <string name="demo_phone">"+12 0123-456-789"</string>
    <string name="profile_details">Profile Details</string>
    <string name="add_images_of_car">Add Images of Car</string>
    <string name="number_plate_detail">Number Plate Details</string>
    <string name="select_your_area">"Select Your Area"</string>
    <string name="search_area">"Search areas"</string>
    <string name="search_here">Search here...</string>
    <string name="full_name">"Full Name"</string>
    <string name="email">"Email"</string>
    <string name="email_address">"Email Address"</string>
    <string name="gender">"Gender"</string>
    <string name="city">"City"</string>
    <string name="state">"State"</string>
    <string name="country">"Country"</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="appointments">Appointments</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="user_name_2">User Name...</string>
    <string name="user_name">UserName</string>
    <string name="status">Status</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="notify_me">Notify Me</string>
    <string name="candidate_profile">Candidate Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone No</string>
    <string name="hint_capacity">Capacity</string>
    <string name="skip">Skip</string>
    <string name="home">Home</string>
    <string name="agenda2">" Agenda:"</string>
    <string name="edit_address">Edit Address</string>
    <string name="charge">Charge: €</string>
    <string name="description_colon">Description: </string>
    <string name="purchased">Purchased</string>
    <string name="payment_approved">Your Payment has been approved</string>
    <string name="payment_decline">Your Payment has been declined, Try again</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_language">Language</string>
    <string name="nav_aboutme">About Me</string>
    <string name="nav_recommend_us">Recommend Us</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_terms_conditions">Terms and Conditions</string>
    <string name="nav_logout">Logout</string>
    <string name="finish_job_message">Are you sure you want to Finish the job?</string>
    <string name="dialog_loading_please_wait">Please wait…</string>
    <string name="logout">Logout</string>
    <string name="reject_request">Reject Request</string>
    <string name="approve_request">Approve Request</string>
    <string name="quit_app">Quit</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_start_job_">Are you sure you want to start the job?</string>
    <string name="are_you_sure_you_want_to_finish_the_job_">Are you sure you want to Finish the job?</string>
    <string name="switch_message_1">Are you sure you want to switch from Hitcher to User?</string>
    <string name="switch_message_2">Are you sure you want to switch from User to Hitcher?</string>
    <string name="reject_message">Are you sure you want to Reject the order request?</string>
    <string name="approve_message">Are you sure you want to Approve the order request?</string>
    <string name="quit_message">Are you sure you want to quit Hitch App?</string>
    <string name="change_language_dialog">Select Language</string>
    <string name="username_empty">Please enter your Username</string>
    <string name="password_empty">Please enter your Password</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="validation_invalid_username_password">Incorrect Email &amp; Password</string>
    <string name="validation_first_name">Please enter your first name</string>
    <string name="validation_last_name">Please enter your last name</string>
    <string name="validation_current_date">Date cannot be less than the current date</string>
    <string name="validation_current_time">Time cannot be less than the current time for today</string>
    <string name="validation_enter_email">Please enter your email address</string>
    <string name="validation_valid_email">Please enter a valid email address</string>
    <string name="validation_enter_password">Please enter your Password</string>
    <string name="validation_password_mismatch">Password Mismatch</string>
    <string name="validation_short_password">Password should be at least 8 characters long</string>
    <string name="validation_short_phone_no">Phone number should be at least 8 digits long</string>
    <string name="validation_select_gender">Please select your gender</string>
    <string name="validation_select_date_of_birth">"Please select your date of birth"</string>
    <string name="validation_enter_contact_number">"Please enter your Contact Number"</string>
    <string name="validation_valid_contact_number">"Please enter a valid Contact Number"</string>
    <string name="please_fill_the_empty_fields">Please fill the empty fields</string>
    <string name="validation_address">"Please enter your Address"</string>
    <string name="validation_enter_city">"Please enter your city"</string>
    <string name="validation_invalid_email">Please enter a valid email address</string>
    <string name="validation_enter_state">Please enter your state</string>
    <string name="validation_enter_country">Please enter your country</string>
    <string name="validation_enter_postal_code">Please enter your postal code</string>
    <string name="validation_subject">Please enter a Subject</string>
    <string name="validation_message">Please enter a Message</string>
    <string name="validation_email">Please enter an Email ID</string>
    <string name="max_3_image">You can add maximum three images</string>
    <string name="check_network">Please check your network</string>
    <string name="email_already_inuse">Email already in use</string>
    <string name="validation_edit_address">Please enter the required fields</string>
    <string name="user_register">You have been registered</string>
    <string name="guest_user">Guest</string>
    <string name="about_me">About Me</string>
    <string name="profile_updated">Your Profile has been updated</string>
    <string name="error_profile_update">Error while updating your profile</string>
    <string name="password_reset">Password Reset Successfully</string>
    <string name="google_fail">Login with Google failed</string>
    <string name="facebook_fail">Login with Facebook failed</string>
    <string name="facebook_cancel">Login with Facebook cancelled</string>
    <string name="switch1">Switch</string>
    <string name="switch_info">In order to switch to Hitcher you need to add some information to your profile</string>
    <string name="no_bank">Bank Details Not Found</string>
    <string name="bank_setup">Your bank account has not be setup, would you like to do it now?</string>
    <string name="no_data_found">No data found</string>
    <string name="days">Days</string>
    <string name="send">Send</string>
    <string name="sign_up_exclm">Sign Up!</string>
    <string name="order_no">Order No</string>
    <string name="complain_title">Complain Title</string>
    <string name="description">Description</string>
    <string name="email_caps">Email</string>
    <string name="password_caps">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="first_name_caps">First Name</string>
    <string name="surname_caps">Surname</string>
    <string name="postal_code_caps">Postal Code</string>
    <string name="city_caps">City</string>
    <string name="country_caps">Country</string>
    <string name="add_your_bank_details">Add Your Bank Details</string>
    <string name="km">Km</string>
    <string name="complain_title_here">Complain Title here..</string>
    <string name="add_your_description_here">Add your description here...</string>
    <string name="distance_range_dialog">Please set a distance range</string>
    <string name="finland">Finland</string>
    <string name="change_language">Change Language</string>
    <string name="check_legal">Check here to indicate that you have read and agree to the above terms.</string>
    <string name="iban_bank_number">IBAN Bank Number</string>
    <string name="transactions_will_occur_through_finland">*Transactions will occur through </string>
    <string name="proceed">Proceed</string>
</resources>