<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.hitchtransporter.transporter.Activities.BankAccount">

    <include layout="@layout/transporter_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <com.hitchtransporter.smart.customViews.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_your_bank_details"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <com.hitchtransporter.smart.customViews.SmartEditText
                android:id="@+id/first_name_acc_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_round_bordered_grey_trans"
                android:hint="@string/first_name_caps"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <com.hitchtransporter.smart.customViews.SmartEditText
                android:id="@+id/last_name_acc_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_round_bordered_grey_trans"
                android:hint="@string/surname_caps"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <com.hitchtransporter.smart.customViews.SmartEditText
                android:id="@+id/acc_no_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_round_bordered_grey_trans"
                android:hint="@string/iban_bank_number"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <com.hitchtransporter.smart.customViews.SmartEditText
                android:id="@+id/postal_code_acc_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_round_bordered_grey_trans"
                android:hint="@string/postal_code_caps"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <com.hitchtransporter.smart.customViews.SmartEditText
                android:id="@+id/city_acc_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_round_bordered_grey_trans"
                android:hint="@string/city_caps"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <com.hitchtransporter.smart.customViews.SmartEditText
                android:id="@+id/state_acc_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_round_bordered_grey_trans"
                android:hint="@string/state"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <com.hitchtransporter.smart.customViews.SmartEditText
                android:id="@+id/country_acc_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_round_bordered_grey_trans"
                android:focusableInTouchMode="false"
                android:hint="@string/country_caps"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/finland"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <com.hitchtransporter.smart.customViews.SmartTextView
                android:id="@+id/txtTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transactions_will_occur_through_finland"
                android:gravity="end"
                android:layout_marginEnd="@dimen/_5sdp"/>


            <com.hitchtransporter.smart.customViews.SmartEditText
                android:id="@+id/dob_acc_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_round_bordered_grey_trans"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_date_of_birth_caps"
                android:inputType="number"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

          <!--  <com.transporter.smart.customViews.SmartEditText
                android:id="@+id/iban_acc_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_round_bordered_grey_trans"
                android:hint="@string/iban_caps"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />-->
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
