<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical">

    <com.hitchtransporter.smart.customViews.SmartTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_range_dialog"
        android:textSize="@dimen/_15sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center">

        <com.hitchtransporter.smart.customViews.SmartEditText
            android:id="@+id/select_range_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_bordered_grey_trans"
            android:hint="e.g. 10"
            android:textColor="@color/black"
            android:maxLength="5"
            android:ems="5"
            android:inputType="number"
            android:gravity="center"
            android:padding="@dimen/_2sdp"/>

        <com.hitchtransporter.smart.customViews.SmartTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km"
            android:layout_marginStart="@dimen/_5sdp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.hitchtransporter.smart.customViews.SmartButton
            android:id="@+id/set_range_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <com.hitchtransporter.smart.customViews.SmartButton
            android:id="@+id/cancel_range_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>